# knowledge-hub

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  COMMANDS.md  LICENSE  MANIFEST.in  PROJECT_PROGRESS.md  README.md  config.yaml.example  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yml  publish.yml  source-quality-nightly.yml  test.yml
artifacts/v0_paper_baseline/: mamba_2312_00752_ids.txt  (+1 more)
docs/: ARCHITECTURE.md  PROJECT_STATE.md  ai_120gb_ko_pipeline.md  approval-verification-set.md  card_synthesis_hypothesis_inventory.json  continuous_sync_launchd.md  curated_ai_source_ingestion.md  eval_center_daily_automation.md  eval_precision_template.csv  eval_queries_ko_20.txt  foundry-knowledge-hub-integration.md  full-guide.md  ko_note_materialization.md  learning-coach-mvp-v2.md  ops_report_automation.md  paper-corpus-quality-audit.md  repo-layout.md  source_input_model_v1.md  source_quality_daily_automation.md  store_authority_inventory.json
eval/: sectioncard_eval_questions.jsonl  sectioncard_eval_sheet.csv  sectioncard_paper_subset.json
foundry-core/: package-lock.json  package.json  tsconfig.json
knowledge_hub/: __init__.py  mcp_server.py  version.py
reviews/: 2026-05-16-recover-strict-paper-compare-provenance-review.md  2026-05-17-add-artifact-acquisition-corpus-bootstrap-review.md  2026-05-17-add-paper-source-artifact-corpus-policy-review.md  2026-05-17-public-cli-mcp-final-audit-review.md  2026-05-17-source-alias-normalization-review.md
scripts/: batch_summarize.py  benchmark_pplx_context_models.py  build_human_review_sheet.py  build_memory_router_failure_taxonomy.py  build_multi_model_priority_review.py  check_public_release_hygiene.py  check_release_smoke.py  collect_memory_router_eval.py  compare_paper_memory_extractors.py  download_assets_from_raw.py  eval_document_memory.py  eval_embedding_collections.py  paper_memory_audit.py  probe_ts_project_cli_timeout.py  rebuild_memory_stores.py  rename_vault.py  rename_vault2.py  repair_event_integrity.py  repair_paper_sources.py  report_checkpoint_split.py  run_continuous_sync.sh  run_daily_eval_center.py  run_daily_eval_center.sh  run_daily_rag_vnext.py  run_daily_source_quality.py  run_daily_source_quality.sh  run_paper_memory_batch_runner.py  run_paper_memory_phase3_recovery.py  sync_worktree_slice.py  transcribe_media.py
tasks/: 2026-04-17-source-quality-observation-automation.md  2026-04-17-source-quality-week1-observation.md  2026-04-19-add-daily-source-quality-local-runner.md  2026-04-20-avoid-duplicate-same-day-source-quality-runs.md  2026-04-21-promote-source-quality-observation-to-hard-gate.md  2026-04-26-activate-daily-eval-center-launchd-automation.md  2026-04-26-add-daily-eval-center-snapshot-automation.md  2026-04-26-add-eval-center-summary-surface.md  2026-04-26-add-failure-bank-v0-jsonl-store.md  2026-04-26-add-operator-readable-eval-center-daily-brief.md  2026-04-27-second-core-agent-ready-local-runtime.md  2026-04-27-second-core-evidence-contract-rag-gate.md  2026-04-27-second-core-research-intake-obsidian-memory.md  2026-04-30-harden-daily-eval-freshness-after-source-quality-failure.md  2026-05-03-add-eval-center-wait-for-source-quality-freshness.md  2026-05-03-isolate-core-serve-context-mcp-tranche.md  2026-05-16-recover-strict-paper-compare-provenance.md  2026-05-17-add-artifact-acquisition-corpus-bootstrap.md  2026-05-17-add-paper-source-artifact-corpus-policy.md  2026-05-17-public-cli-mcp-final-audit.md  2026-05-17-source-alias-normalization.md
tests/: conftest.py  test_agent_cmd.py  test_answer_contract_schemas.py  test_answer_contracts_runtime.py  test_answer_loop.py  test_answer_orchestrator_services.py  test_answer_payload_builder.py  test_answer_quality_gate.py  test_answer_rewrite.py  test_answer_verification.py  test_answer_verification_guards.py  test_arxiv_source_tex_availability_audit.py  test_ask_v2_card_selectors.py  test_ask_v2_eval.py  test_ask_v2_pipeline_result.py  test_ask_v2_sources.py  test_ask_v2_support.py  test_authority_contract.py  test_candidate_layer_blocker_backlog.py  test_candidate_layer_blocker_decision_edit_plan.py  test_candidate_layer_blocker_decision_file_draft.py  test_candidate_layer_blocker_decision_file_validation.py  test_candidate_layer_blocker_decision_input_pack.py  test_candidate_layer_blocker_decision_record.py  test_candidate_layer_blocker_decision_template.py  test_candidate_layer_blocker_manual_decision_command_packet.py  test_candidate_layer_blocker_manual_decision_review_sheet.py  test_candidate_layer_blocker_nonbinding_decision_recommendations.py  test_candidate_layer_blocker_resolution_preview.py  test_candidate_layer_blocker_review_pack.py  test_candidate_layer_promotion_policy_draft.py  test_candidate_layer_remaining_manual_blocker_review_pack.py  test_candidate_layer_review_gate.py  test_card_synthesis_hypothesis_inventory.py  test_checkpoint_split_report.py  test_cli_add_facade.py  test_cli_error_handler.py  test_cli_smoke_contract.py  test_codex_backend.py  test_compare_packet_contract.py  (+219 more)
worklog/: 2026-05-16.md  2026-05-17.md
(+1221 files in other folders)
